Changes for 3.2.2rc1

New features:
........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)

Bug fixes:
.......PS. [ZBX-11213] fixed database monitoring keys (wiper)

--------------------------------------------------------------------------------
Changes for 3.2.1

Bug fixes:
..F....... [ZBX-11210] fixed link "Help" to a proper version of Zabbix manual (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.1rc1

New features:
.......PS. [ZBXNEXT-3106] improved concurrent VMware item polling speed, reduced size of cached VMware data (wiper)
A.F....... [ZBX-1357] updated Chinese (China), French, Italian, Portuguese (Brazil) translations; thanks to Zabbix translators (zalex_ua)
..F....... [ZBX-11136] increased width of input fields (Sasha)

Bug fixes:
........S. [ZBX-11204] fixed parameter parsing in calculated items when it contains double quote escaping (Sergejs)
........S. [ZBX-11250] fixed trigger update after executing event correlation 'close new' operation (wiper)
.......PS. [ZBX-5448] fixed possible delay when proxy sends cached history to server (vso)
.......PS. [ZBX-7595] fixed long SNMP OID not being accepted (vso)
....I..... [ZBX-7108] fixed error when upgrading graph_theme table in proxy database from 1.8 to 2.0 (vso)
..F....... [ZBX-9068] fixed forms behaviour when enter key is pressed (Sasha)
...G...PS. [ZBX-11245] fixed escaped double quote parsing in quoted parameters in array in item key parameters (gleb)
....I..... [ZBX-11175] fixed compilation failure for OpenBSD 5.8, 5.9, 6.0 (vso)
..F....... [ZBX-11137] fixed validation of new host group when creating/updating template (Gunars)
..F....... [ZBX-11050] changed translation string "Acknowledges" => "Acknowledgements" (Cemeris)
A......... [ZBX-11196] implemented dynamic default sortorder for icon mappings, now default sortorder increases by one with each entry of mapping (Cemeris)