@@ -4,6 +4,7 @@ New features:
 ........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)
 
 Bug fixes:
+.......PS. [ZBX-11021] fixed discoverer to log that it has started before SNMP library initialization (vso)
 .......PS. [ZBX-11213] fixed database monitoring keys (wiper)
 
 --------------------------------------------------------------------------------
@@ -191,6 +192,7 @@ New features:
 ........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)
 
 Bug fixes:
+.......PS. [ZBX-11021] fixed discoverer to log that it has started before SNMP library initialization (vso)
 .......PS. [ZBX-11213] fixed database monitoring keys (wiper)
 
 --------------------------------------------------------------------------------
